# x_create_cv_x

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGE_CONTROL_PACKET.md  CV_OFFICE_REGENERATION_PLAN.md  ONLINE_SERVICE_STRATEGY.md  README.md  RELEASE_NOTES_0.0.2.md  RELEASE_NOTES_0.0.3.md  SECURITY.md  WORLD_CLASS_CV_GLIDEPATH.md  pyproject.toml  x_create_cv_factory_x.py
.github/workflows/: ci.yml
audit_policies/: default_office_audit_policy.json
schemas/: audit_policy.schema.json  document_layout.schema.json  master_profile.schema.json  resume.schema.json  workbook_layout.schema.json
tests/: test_x_create_cv_factory_x.py
tests/fixtures/: fake_profile_seed.json
